COP3330/proj4/log.txt
log.txt # log file for DOT Common Carrier project
10/11/2017
Jon Crawford
crawford

10/11/2017 8:56AM: Initial copying of files and setting up directory for project
Also, made log and read assignment page several times. 

10/13/2017 8:57AM: making shapes.h and copied those into shapes.cpp to outline
functions before filling them in later today after class.

10/13/2017 5:44PM: Have a lot of code filled in for shapes.cpp now and I can
compile without errors using co3330 but am not sure if my functions are init
correctly going to read up more on the stipulations of the project and possibly
do some testing tonight by compiling/running the entire shapes portion of
project.

10/13/2017 8:04PM: Made the whole makefile and commented out the vehicle portion
so i could test my shapes code with the com file. at first it was terrible
amount of errors but over time gradually I figured out that I needed to make
some virtual and some not because they were all printing generic and 0.00 for
values. But now I am printing exactly like the test harness here's a snippet.

crawford@linprog8.cs.fsu.edu:~/cop3330/proj4>stester.x < stester.com

Codes: 0 = Shape, 1 = Box, 2 = Cylinder, 3 = Rectangle
Enter code followed by size arguments ('Q' to quit):  Enter X,Y,X,v: 
Shape(1.00,2.00,3.00,1)
 Name: generic
 Volume: 0.00
 Area:   0.00
~Shape()

Codes: 0 = Shape, 1 = Box, 2 = Cylinder, 3 = Rectangle
Enter code followed by size arguments ('Q' to quit):  Enter L,W,H,v: 
Shape(2.00,3.00,4.00,1)
Box(2.00,3.00,4.00,1)
 Name: box
 Volume: 24.00
 Area:   52.00
~Box()
~Shape()

Looks good so I think I am going to stop there for the day. makefile and shapes
all done, tomorrow moving on to vehicles.

10/17/2017 8:43AM: making vehicles.h and filling vehicles.cpp, tried a co3330
compile and have an error at every verbose, and lots of times I spelled
Commercial Commcerical no idea why i keep doing that. Also I am getting 3 errors
for the all the char* values and I think its because i need to copy the cstring
and null terminate it like in the prior project. here is the error:

crawford@linprog5.cs.fsu.edu:~/cop3330/proj4>co3330 vehicles
clang++ -std=c++11 -c -I . -I /home/courses/cop3330p/LIB/cpp vehicles.cpp
vehicles.cpp:22:5: error: cannot initialize a member subobject of type 'char *'
with an lvalue of type 'const char *'
  :
  vehicleRegistration_(registration),operatorID_(operatorID),operatorCDL_(operatorCDL),
    ^                    ~~~~~~~~~~~~
vehicles.cpp:22:40: error: cannot initialize a member subobject of type 'char *'
with an lvalue of type 'const char *'
  :
  vehicleRegistration_(registration),operatorID_(operatorID),operatorCDL_(operatorCDL),
                                       ^           ~~~~~~~~~~
vehicles.cpp:22:64: error: cannot initialize a member subobject of type 'char *'
with an lvalue of type 'const char *'
  :
  vehicleRegistration_(registration),operatorID_(operatorID),operatorCDL_(operatorCDL),
                                                               ^
							       ~~~~~~~~~~~
3 errors generated.

10/17/2017 5:41PM: So i just tried it with the first one vehicleRegistration and now I only have
two errors. So i am going to do this for the other two and then probably have to
delete them in my destructor.
Minus a typo that totally worked.
co3330 has no errors so I will probably do some testing tonight for behavior.

20/17/2017 7:13PM: I am getting a problem where the verbose value is going into
the passengercapacity when it's a truck so I get an output like this and the
verbose value is lost since those have different amount of parameters.

Enter sn ('Q' to quit): 
Short Name:    TRK
Registration:  5
Operator ID:   id_OK
Operator CDL:  cdl_OK
Passenger Cap: 1
Load Capacity: 0.00


10/17/2017 9:38PM: Finally found the problem it was in the truck init list and
now it is printing okay and showing same as the tester. 
Just did a robocheck and had a couple little errors I was missing a comma in a
print out I forgot about, and I switched a variable y for z on the cylinder. All
else is good so I am going to fix those and re-submit.

10/20/2017 5:44PM: Thinking about submitting again after cleaning up some code.
I had to make the commercial vehicle variables private I misread that so I fixed
that. Also, when a variable is not used like with a rectangle or a cylinder,
they still need to print as 0.00 and the assignment doc says that only verbose
can be initialized to 0, so i just decided to make them zero in the call to
match the tester's printing. 
